--- a/CursachPrototype/Content/Styles/Site.css
+++ b/CursachPrototype/Content/Styles/Site.css
@@ -13,30 +13,14 @@ input.input-validation-error {
 input[type="checkbox"].input-validation-error {
     border: 0 none;
 }
-.validation-summary-errors {
-    color: #b94a48;
-}
-.validation-summary-valid {
-    display: none;
-}
 
-/*Global*/
-
-.horizontal-container {
-    overflow: hidden;
-    padding-bottom: 50px;
-}
-
-.horizontal-container .item {
-    display: inline-block;
-}
-
-.right {
-    float: right;
-    padding-right: 10px;
-}
-
-.left {
-    float: left;
-    padding-left: 10px;
+/*Footer*/
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
 }
