--- a/CursachPrototype/Views/Account/Login.cshtml
+++ b/CursachPrototype/Views/Account/Login.cshtml
@@ -4,28 +4,29 @@
     ViewBag.Title = "Вход";
 }
 
-<h2>Вход на сайт</h2>
-<p><i>@ViewData["FromInfo"]</i></p>
-
-@using (Html.BeginForm("Login", "Account"))
-{
-    <fieldset>
+<div class="container">
+    <h2 class="text-center">Вход на сайт</h2>
+    @using (Html.BeginForm("Login", "Account", FormMethod.Post, htmlAttributes: new { @id = "mainForm" }))
+    {
         @Html.AntiForgeryToken()
-
         <div>
-            @Html.ValidationSummary()
-            <input type="hidden" name="returnUrl" value="@ViewBag.returnUrl" />
-            <p>
-                <label>Email</label><br />
-                @Html.EditorFor(x => x.Email)
-            </p>
-            <p>
-                <label>Пароль</label><br />
-                @Html.EditorFor(x => x.Password)
-            </p>
-            <p>
-                <button type="submit">Войти</button>
-            </p>
+           @if (ViewData.ModelState[""] != null && ViewData.ModelState[""].Errors.Any())
+           {
+            <div class="alert alert-error text-center col-md-6 col-md-offset-3">
+                <a class="close" data-dismiss="alert">×</a>
+                <h5 class="alert-heading">Вход не выполнен</h5>
+                @Html.ValidationSummary(true)
+            </div>
+           }
+            <div class="form-group text-center col-md-6 col-md-offset-3">
+                @Html.LabelFor(vm => vm.Email)
+                @Html.TextBoxFor(model => model.Email, new { @class = "form-control text-center" })
+            </div>
+            <div class="form-group text-center col-md-6 col-md-offset-3">
+                @Html.LabelFor(vm => vm.Password)
+                @Html.PasswordFor(model => model.Password, new { @class = "form-control text-center" })
+            </div>
         </div>
-    </fieldset>
-}
+    }
+</div>
+<button type="submit" class="btn btn-success  center-block" form="mainForm">Войти</button>
