--- a/CursachPrototype/Views/Account/Register.cshtml
+++ b/CursachPrototype/Views/Account/Register.cshtml
@@ -1,55 +1,42 @@
 ﻿@model CursachPrototype.ViewModels.RegisterVm
-
 @{
     ViewBag.Title = "Регистрация";
 }
 
-<h2>Регистрация</h2>
-
-
-@using (Html.BeginForm("Register", "Account"))
-{
-  
-    @Html.AntiForgeryToken()
-    <fieldset>
+<div class="container">
+    <h2 class="text-center">Регистрация пользователя</h2>
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, htmlAttributes: new {@id = "mainForm"}))
+    {
+        @Html.AntiForgeryToken()
         <div>
-            <h4>Регистрация пользователя</h4>
-            <hr />
-            @Html.ValidationSummary(false)
-
-            <div>
-                Электронный адрес
-                <div>
-                    @Html.EditorFor(model => model.Email)
-                </div>
+            <hr/>
+            <div class="alert alert-error text-center col-md-6 col-md-offset-3">
+                <a class="close" data-dismiss="alert">×</a>
+                <h5 class="alert-heading">Вход не выполнен</h5>
+                @Html.ValidationSummary(true)
             </div>
 
-            <div>
-                Ваш ник. Используется как суфикс к имени ваших баз данных и логин для подключения к базе данных
-                <div>
-                    @Html.EditorFor(model => model.NickName)
-                </div>
+            <div class="form-group text-center col-md-6 col-md-offset-3">
+                @Html.LabelFor(model => model.NickName, "Электронный адресc:")
+                @Html.TextBoxFor(model => model.Email, new {@class = "form-control text-center"})
             </div>
 
-            <div>
-                Пароль
-                <div>
-                    @Html.EditorFor(model => model.Password)
-                </div>
+            <div class="form-group text-center col-md-6 col-md-offset-3">
+                @Html.LabelFor(model => model.NickName, "Ваш ник. Используется как суфикс к имени ваших баз данных и логин для подключения к базе данных:")
+                @Html.TextBoxFor(model => model.NickName, new {@class = "form-control text-center"})
             </div>
 
-            <div>
-                Подтвердить пароль
-                <div>
-                    @Html.EditorFor(model => model.PasswordConfirm)
-                </div>
+            <div class="form-group text-center col-md-6 col-md-offset-3">
+                @Html.LabelFor(model => model.Password, "Пароль:")
+                @Html.PasswordFor(model => model.Password, new {@class = "form-control text-center"})
             </div>
 
-            <div>
-                <div>
-                    <input type="submit" value="Зарегистрировать" />
-                </div>
+            <div class="form-group text-center col-md-6 col-md-offset-3">
+                @Html.LabelFor(model => model.Password, "Подтвердить пароль:")
+                @Html.PasswordFor(model => model.PasswordConfirm, new {@class = "form-control text-center"})
             </div>
         </div>
-    </fieldset>
-}
+    }
+</div>
+<button type="submit" class="btn btn-success center-block" form="mainForm">Зарегистрировать</button>
+    
