--- a/CursachPrototype/Views/Query/QueryExecutor.cshtml
+++ b/CursachPrototype/Views/Query/QueryExecutor.cshtml
@@ -1,24 +1,36 @@
 ﻿@model CursachPrototype.ViewModels.QueryExecutorVm
 
-@using (Ajax.BeginForm("QueryExecutor", "Query", new AjaxOptions { UpdateTargetId = "results" }))
-{
-    @Html.HiddenFor(m => m.DbId)
-    <fieldset>
-        @Html.LabelFor(m => m.DbName, "База данных: ")
-        @Html.DisplayFor(m => m.DbName)
-        <br />
-        @Html.LabelFor(m => m.Query, "Запрос: ")<br />
-        @Html.TextArea("query")
+<script type="text/javascript">
+    onload($('#ModalExecute').modal('show'))
+</script>
 
-        <div>
-            <input type="submit" />
+<div class="modal fade" id="ModalExecute" role="dialog" data-backdrop="static">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"  onclick="$('#ModalExecute').modal('close')">&times;</button>
+                <h4 class="modal-title">Запрос к @Model.DbName</h4>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    @using (Ajax.BeginForm("QueryExecutor", new {controller = "Query"}, new AjaxOptions {UpdateTargetId = "results"}, new {@id = "mainForm"}))
+                    {
+                        @Html.HiddenFor(model => model.DbId)
+                        @Html.TextArea("query", new {@class = "form-control", @rows = "5"})
+                    }
+                    <div id="results"></div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                    <button class="btn btn-primary" form="mainForm">Выполнить</button>
+                    <button class="btn btn-default" data-dismiss="modal" onclick="$('#ModalExecute').modal('close')">Закрыть</button>
+            </div>
         </div>
-    </fieldset>
-}
-
-<div id="results">
-    @Html.DisplayFor(m => m.QueryResult)
+    </div>
 </div>
+
+
 
 
 @section Scripts{
