--- a/CursachPrototype/Views/CsDispatcher/CreateProtectedDb.cshtml
+++ b/CursachPrototype/Views/CsDispatcher/CreateProtectedDb.cshtml
@@ -1,35 +1,40 @@
 ﻿@model CursachPrototype.ViewModels.ProtectedDbVm
 
 @{
-    ViewBag.Title = "Создание БД";
+    ViewBag.Title = "Создание защищенной БД";
 }
-<h2>Созданиние базы данных</h2>
-<p>Укажите параметры базы данных</p>
 
-@using (Html.BeginForm("CreateProtectedDb", "CsDispatcher", FormMethod.Post))
-{
-    <fieldset>
+<div class="container">
+    <h2 class="text-center">Созданиние защищенной базы данных</h2>
+
+    @using (Html.BeginForm("CreateProtectedDb", "CsDispatcher", FormMethod.Post, new { @id = "mainForm" }))
+    {
         @Html.AntiForgeryToken()
         @Html.ValidationSummary()
 
-        @Html.LabelFor(m => m.DataBaseName , "Введите название базы данных")<br/>
-        @Html.TextBoxFor(m => m.DataBaseName)
-        @Html.ValidationMessageFor(m => m.DataBaseName)
-        <br/>
-
-        @Html.LabelFor(m => m.DataBaseName, "Введите пароль для базы данных")<br />
-        @Html.TextBoxFor(m => m.DataBasePassword)
-        @Html.ValidationMessageFor(m => m.DataBasePassword)
-        <br />
-        @foreach (string server in Model.AvailableServers)
-        {
-            @Html.RadioButtonFor(m => m.SelectedServer, server)
-            @Html.LabelFor(m => m.SelectedServer, server)
-            @Html.ValidationMessageFor(m => m.SelectedServer)
-        }
-
-        <div>
-            <input type="submit"/>
+        <div class="col-md-6 col-md-offset-3 form-group text-center">
+            @Html.LabelFor(m => m.DataBaseName, "Название:")
+            @Html.TextBoxFor(m => m.DataBaseName, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.DataBaseName)
         </div>
-    </fieldset>
-}
+
+        <div class="col-md-6 col-md-offset-3 form-group text-center">
+            @Html.LabelFor(m => m.DataBasePassword, "Пароль:")
+            @Html.TextBoxFor(m => m.DataBasePassword, new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.DataBasePassword)
+        </div>
+
+        <div class="col-md-6 col-md-offset-4 radio-inline">
+            @foreach (string server in Model.AvailableServers)
+            {
+                <label>
+                    @Html.RadioButtonFor(m => m.SelectedServer, server)
+                    @server
+                </label>
+            }
+            @Html.ValidationMessageFor(m => m.SelectedServer)
+        </div>
+    }
+</div>
+
+<button type="submit" class="btn btn-default center-block" form="mainForm">Создать</button>
