--- a/CursachPrototype/Views/DisplayTable/EditTable.cshtml
+++ b/CursachPrototype/Views/DisplayTable/EditTable.cshtml
@@ -1,49 +1,55 @@
 ﻿@using System.Data
-@using System.Globalization
 @using CursachPrototype.ExtensionMethods
 @model DataTable
 
-<h2>@ViewBag.StatusMessage</h2>
-<div class="horizontal-container">
-    <div class="left">
-        <table>
+<h2>
+    @TempData["StatusMessage"]
+</h2>
+
+<div class="panel panel-default">
+    <!-- Default panel contents -->
+    <div class="panel-heading">
+        <p class="panel-title pull-left">
+            @Model.Rows.Count записей
+        </p>
+        <div class="btn-group pull-right">
+            @Ajax.ActionLink("Новая запись", "AddRecord",null, new AjaxOptions{ UpdateTargetId = "ajax" },  new { @class = "btn btn-info col-xs-6" })
+            @Ajax.ActionLink("Новый столбец", "AddColumn", null, new AjaxOptions { UpdateTargetId = "ajax" }, new { @class = "btn btn-info col-xs-6" })
+        </div>
+        <div class="clearfix"></div>
+    </div>
+    <div class="table-responsive">
+        <table class="table">
             <thead>
-                <tr>
-                    @foreach (DataColumn dc in Model.Columns)
-                    {
-                        <th>@dc.ColumnName</th>
-                    }
-                </tr>
+            <tr>
+                @foreach (DataColumn dc in Model.Columns)
+                {
+                    <th>@dc.ColumnName</th>
+                }
+                <th class="text-center">Действия</th>
+            </tr>
             </thead>
             <tbody>
-                @foreach (DataRow dr in Model.Rows)
+            @foreach (DataRow dr in Model.Rows)
             {
-                    <tr>
-                        @Html.Partial("RenderTableRow", dr)
-                        <td>
-                            @Ajax.ActionLink("Редактировать", "Edit",
-                           new { id = dr[Model.Columns.Cast<DataColumn>().First(column => column.ColumnName.ContainsIgnoreCase("Id"))].ToString() },
-                           new AjaxOptions { UpdateTargetId = "ajax" })
-                        </td>
-                        <td>
-                            @Ajax.ActionLink("Удалить", "Delete",
-                           new { id = dr[Model.Columns.Cast<DataColumn>().First(column => column.ColumnName.ContainsIgnoreCase("Id"))].ToString() },
-                           new AjaxOptions { UpdateTargetId = "ajax" })
-                        </td>
-                    </tr>
-                }
+                <tr>
+                    @Html.Partial("RenderTableRow", dr)
+                    <td class="btn-group text-center">
+                        @Ajax.ActionLink("Редактировать", "Edit",
+                            new {id = dr[Model.Columns.Cast<DataColumn>().First(column => column.ColumnName.ContainsIgnoreCase("Id"))].ToString()},
+                            new AjaxOptions {UpdateTargetId = "ajax"},
+                            new {@class = "btn btn-info btn-xs"})
+                        @Ajax.ActionLink("Удалить", "Delete",
+                            new {id = dr[Model.Columns.Cast<DataColumn>().First(column => column.ColumnName.ContainsIgnoreCase("Id"))].ToString()},
+                            new AjaxOptions {UpdateTargetId = "ajax"},
+                            new {@class = "btn btn-info btn-xs"})
+                    </td>
+                </tr>
+            }
             </tbody>
         </table>
-
-        <br />
-        <hr />
     </div>
-
-    @using (Ajax.BeginForm("Add", "DisplayTable", new AjaxOptions { UpdateTargetId = "ajax", HttpMethod = "Get" }))
-    {
-        <button>Добавить запись</button>
-    }
-
-    <div class="left" id="ajax">
-    </div>
+    <div id="ajax"></div>
 </div>
+
+
