--- a/CursachPrototype/Views/Shared/_LoginPartial.cshtml
+++ b/CursachPrototype/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNet.Identity
-<nav class="navbar navbar-default">
+﻿<nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -13,6 +12,7 @@
             <a class="navbar-brand" href="@Url.Action("Index", "Home")">
                 <span class="glyphicon glyphicon-home"
                       aria-hidden="true"></span>
+                Главная
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
