Added add column view

--- a/CursachPrototype/Views/UserRoom/WatchConnectionString.cshtml
+++ b/CursachPrototype/Views/UserRoom/WatchConnectionString.cshtml
@@ -9,7 +9,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" onclick="$('#ModalCs').modal('close')">&times;</button>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Строка подключения</h4>
             </div>
             <div class="modal-body">
@@ -17,7 +17,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal" onclick="copyToClipboard('connectionString')">Скопировать в буфер обмена</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal" onclick="$('#ModalCs').modal('close')">Закрыть</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
     </div>
