--- a/CursachPrototype/Views/DisplayTable/AddColumn.cshtml
+++ b/CursachPrototype/Views/DisplayTable/AddColumn.cshtml
@@ -12,30 +12,34 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">Создание колонки</h4>
+                <p>@ViewBag.CreateColumnMessage</p>
             </div>
             <div class="modal-body">
                 <div class="form-group text-center">
-                    @using (Html.BeginForm("UpdateWithNewColumn", "DisplayTable", FormMethod.Post, new { @id = "AddFormColumn" }))
+                    @using (Html.BeginForm("UpdateWithNewColumn", "DisplayTable", FormMethod.Post, new { @id = "AddColumnForm" }))
                     {
                         @Html.ValidationSummary()
 
                         @Html.LabelFor(m => m.ColumnName, "Название колонки")
                         @Html.TextBoxFor(m => m.ColumnName, new { @class = "form-control" })
 
-                        @Html.LabelFor(m=> m.TypeName, "Выберите тип")
-                        @Html.DropDownListFor(vm => vm.TypeName, Model.AvailableTypes, new {@class = "form-control"})
+                        @Html.LabelFor(m => m.DefaultValue, "Значенние по умолчанию (не обязательно)")
+                        @Html.TextBoxFor(m => m.DefaultValue, new { @class = "form-control" })
 
-                        @Html.LabelFor(m=>m.TypeLength, "Укажите длину строки (если выбрали строку)")
-                        <br/>
+                        @Html.LabelFor(m => m.TypeName, "Выберите тип")
+                        @Html.DropDownListFor(vm => vm.TypeName, Model.AvailableTypes, new { @class = "form-control" })
+
+                        @Html.LabelFor(m => m.TypeLength, "Укажите длину строки (если выбрали строку)")
+                        <br />
                         @Html.EditorFor(m => m.TypeLength, new { @class = "form-control input-number " })
 
                         @Html.LabelFor(m => m.Constraints, "Укажите ограничения для этой колонки (не обязательно)")
-                        @Html.TextBoxFor(m => m.Constraints, new {@class="form-control"})
+                        @Html.TextBoxFor(m => m.Constraints, new { @class = "form-control" })
                     }
-                    </div>
                 </div>
+            </div>
             <div class="modal-footer">
-                <button type="submit" class="btn btn-default" data-dismiss="modal" form="AddColumnForm">Создать</button>
+                <input type="submit" class="btn btn-success" form="AddColumnForm" value="Создать">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>
             </div>
         </div>
