--- a/CursachPrototype/Views/DisplayTable/AddColumn.cshtml
+++ b/CursachPrototype/Views/DisplayTable/AddColumn.cshtml
@@ -19,6 +19,7 @@
                     @using (Html.BeginForm("UpdateWithNewColumn", "DisplayTable", FormMethod.Post, new { @id = "AddColumnForm" }))
                     {
                         @Html.ValidationSummary()
+                        @Html.HiddenFor(m => m.TableName)
 
                         @Html.LabelFor(m => m.ColumnName, "Название колонки")
                         @Html.TextBoxFor(m => m.ColumnName, new { @class = "form-control" })
